--- a/TM.RestHour/css/style.css
+++ b/TM.RestHour/css/style.css
@@ -203,7 +203,7 @@ ul, ol {
 /* line 121, G:/admin_project/10 admin/cryptocurrency/scss/_reset.scss */
 p {
     line-height: 24px;
-    font-size: 14px;
+    font-size: 13px;
     margin-bottom: 0px;
     color: #6F7A92;
     font-family: "Merriweather Sans", sans-serif;
@@ -16030,19 +16030,119 @@ button:disabled {
 .arrowimg h1 {
     display: inline-block;
 }
-#print-content > input {
 
+#print-content > input {
     margin: 20px;
     background: #0765b5;
     border: 0;
     color: #fff;
     padding: 9px 19px;
 }
+
 .side-space {
     padding: 0 30px;
     overflow: hidden;
 }
+
 .custom-stylel td:last-child {
     width: 67% !important;
     display: block;
 }
+
+.ros-sec {
+    padding: 11px 41px;
+}
+
+    .ros-sec p {
+        background: #075597;
+        padding: 10px;
+        color: #fff;
+        width: 56%;
+    }
+
+    .ros-sec input {
+        position: relative;
+        top: 3px;
+        left: 3px;
+    }
+
+    .ros-sec table tr td {
+        border: 1px solid #000;
+        padding: 9px 20px;
+        margin: 10px 3px;
+        display: inline-block;
+    }
+
+.zhor-sec {
+}
+
+    .zhor-sec table thead {
+        background: #034379;
+        color: #fff;
+        border: 1px solid #034379;
+    }
+
+        .zhor-sec table thead tr td {
+            padding: 10px 16px;
+        }
+
+    .zhor-sec table tbody input {
+        position: relative;
+        top: 2px;
+        margin: 0 5px 0 0;
+        display: inline-block;
+    }
+
+    .zhor-sec table tbody tr td {
+        padding: 10px;
+        border: 1px solid #d1d1d1;
+    }
+
+.beck-sec {
+    margin: 0 30px;
+    width: 94%;
+}
+
+    .beck-sec table {
+        width: 100%;
+        margin-bottom: 23px;
+    }
+
+    .beck-sec p {
+        font-size: 15px;
+        font-weight: 600;
+        padding: 5px 10px;
+        background: #053a67;
+        color: #fff;
+    }
+
+    .beck-sec tr td {
+        padding: 10px 7px;
+        border: 1px solid #dcdcdc;
+    }
+
+        .beck-sec tr td input {
+            position: relative;
+            top: 2px;
+            margin: 0 5px 0 0;
+            display: inline-block;
+        }
+
+.emo-sec {
+    margin: 20px 0;
+}
+
+    .emo-sec table {
+        width: 100%;
+    }
+
+        .emo-sec table tr td {
+            border: 1px solid #a5a3a3;
+            padding: 10px 20px;
+        }
+
+            .emo-sec table tr td input {
+                position: relative;
+                top: 2px;
+                margin: 0 7px 0 0;
+            }
