--- a/TM.RestHour/Views/MedicalAssistance/CIRM.cshtml
+++ b/TM.RestHour/Views/MedicalAssistance/CIRM.cshtml
@@ -53,7 +53,7 @@
                             <li role="presentation" class="tab"><span>Vessel Details</span></li>
                             <li role="presentation" class="tab">  <span>Voyage Details</span></li>
                             <li role="presentation" class="tab"><span>Weather Details</span></li>
-                            <li role="presentation" class="tab">  <span>Petaint  Details</span></li>
+                            <li role="presentation" class="tab">  <span>Patient Details</span></li>
                         </ul>
                     </div>
                     <!-- Tab panes -->
