--- a/TM.RestHour/Views/Shared/_Layout.cshtml
+++ b/TM.RestHour/Views/Shared/_Layout.cshtml
@@ -281,15 +281,12 @@
                                         <a class="" href="#"> <img src="../img/icon/question_icon.png" alt=""></a>
                                     </li>
                                     <li>
-                                        <a class="" href="#"> <img src="../img/icon/ticket_icon.png" class="ticketIcon" alt=""></a>
+                                        @*<a class="" href="#"> <img src="../img/icon/ticket_icon.png" class="ticketIcon" alt=""></a>*@
                                     </li>
                                     <li>
-                                        <a class="bell_notification_clicker nav-link-notify" href="#">
+                                        @*<a class="bell_notification_clicker nav-link-notify" href="#">
                                             <img src="../img/icon/bell.svg" alt="">
-                                            <!-- <span>2</span> -->
-                                        </a>
-                                        <!-- Menu_NOtification_Wrap  -->
-                                        <!--/ Menu_NOtification_Wrap  -->
+                                        </a>*@
                                     </li>
 
                                 </div>
