--- a/TM.RestHour/Views/CrewHealth/ReportDailyTemperature.cshtml
+++ b/TM.RestHour/Views/CrewHealth/ReportDailyTemperature.cshtml
@@ -47,7 +47,8 @@
                 @Html.Hidden("getCrewTemperaturePageWise2", @Url.Action("GetCrewTemperaturePageWise2", "CrewHealth"))
 
                 @Html.Hidden("savecrewtemperature", @Url.Action("SaveCrewTemperature", "CrewHealth"))
-
+                @Html.Hidden("GetCrewTemperatureByID", @Url.Action("GetCrewTemperatureByID", "CrewHealth"))
+                @Html.Hidden("GetAgeFromDOBForCrewTemperature", @Url.Action("GetAgeFromDOBForCrewTemperature", "CrewHealth"))
 
                 <div class="" id="sideform">
                     <div class="">
@@ -142,6 +143,7 @@
                                 <th>SPO2</th>
                                 <th>Fasting Suger</th>
                                 <th>Random Suger</th>
+                                <th>Edit</th>
                             </tr>
                         </thead>
                     </table>
@@ -167,15 +169,16 @@
 
                         <div class="modal-dialog" id="dvuserdetailsn" style="width: 802px;">
                             <fieldset class="for-panel">
+                                  <div class="form-group">
+                                      <input type="hidden" id="ID" />
+                                  </div>
                                 <div class="row">
 
-                                    <div class="">
+                                    @*<div class="">
                                         <label for="selectCrew">Crew Name</label>
-                                        @*@Html.DropDownListFor(model => model.Crew.ID, (IEnumerable<SelectListItem>)ViewBag.Crew, "Select", new { @class = "form-control", @id = "ddlCrew" })*@
                                         @Html.HiddenFor(model => model.Crew.ID, new { id = "hdnCrewId", value = Model.Crew.ID })
                                         @Html.DropDownListFor(model => model.Crew.ID, (IEnumerable<SelectListItem>)ViewBag.Crew, "Select", new { @class = "form-control", @id = "ddlCrew" })
-
-                                    </div>
+                                    </div>*@
                                     <div class="">
                                         <div class="form-group">
                                             <label for="Height">Height(cm)</label>
@@ -196,14 +199,15 @@
                                     </div>
                                     <div class="">
                                         <div class="form-group">
-                                            <button type="button" class="btn btn-info mrRHT-10" id="CalculateBMI"><i class="ti-eye"></i>Calculate BMI</button>
+                                            @*<button type="button" class="btn btn-info mrRHT-10" id="CalculateBMI"><i class="ti-eye"></i>Calculate BMI</button>*@
+                                            <button type="button" class="btn btn-info mrRHT-10" id="btnSubmit" style="margin-top:0px;" onclick="return CalculateBMI();">Calculate BMI</button>
                                             <input type="text" class="form-control" id="BMI" placeholder="BMI" />
                                         </div>
                                     </div>
                                     <div class="">
                                         <div class="form-group">
                                             <label for="AnyDietaryRestrictions">Any Dietary Restrictions</label>
-                                            <input type="text" class="form-control" id="AnyDietaryRestrictions" placeholder="Any Dietary Restrictions" />      
+                                            <input type="text" class="form-control" id="DietaryRestriction" placeholder="Any Dietary Restrictions" />      
                                         </div>
                                     </div>
 
@@ -264,8 +268,8 @@
                         </div>
 
                         <div class="modal-footer">
-                            <button type="button" class="button1" id="btnAdd" onclick="return SaveCrewTemperature();" style="width:86px;">Add</button>
-                            <button type="button" class="button1" id="btnUpdate" style="display:none; width:86px;" onclick="Add();">Update</button>
+                            <button type="button" class="btn btn-info mrRHT-10" id="btnAdd" onclick="return SaveCrewTemperature();" style="width:86px;">Add</button>
+                            <button type="button" class="btn btn-info mrRHT-10" id="btnUpdate" style="display:none; width:86px;" onclick="SaveCrewTemperature();">Update</button>
                             <button type="button" class="btn btn-default" data-dismiss="modal" style="width:86px;">Close</button>
                         </div>
                     </div>
@@ -354,10 +358,15 @@
 
         $(document).ready(function () {
 
+
+            var cID = $('#ddlCrew').val();
+            GetAgeFromDOBForCrewTemperature(cID);
+
+
             $('#btnPrint').attr('disabled', true);
             $('#btnPrintForAll').attr('disabled', true);
 
-
+            $("#btnAdd").prop("disabled", true); // deep
 
 
 
@@ -377,7 +386,36 @@
                 $("#ddlCrew").prop("disabled", true);
 
             }
+
+
+
         });
+
+
+
+        $("#btnSubmit").click(function () {   //deep
+            //alert("button");
+            $("#btnAdd").prop("disabled", false);
+        });
+
+        function CalculateBMI() {
+            var weight = $("#Weight").val();
+            var height = $("#Height").val();
+            //alert(weight);
+            if (weight > 0 && height > 0) {
+                var actualht = height / 100;
+                actualht = actualht.toFixed(2);
+                var finalBmi = (weight / (actualht * actualht));
+                finalBmi = finalBmi.toFixed(2);
+
+                $("#BMI").val(finalBmi);
+            }
+        }
+
+
+
+
+
 
 
         $('#ShowReport').click(function () {
