--- a/TM.RestHour/Views/CrewHealth/ReportDailyTemperature.cshtml
+++ b/TM.RestHour/Views/CrewHealth/ReportDailyTemperature.cshtml
@@ -47,7 +47,7 @@
                 @Html.Hidden("getCrewTemperaturePageWise2", @Url.Action("GetCrewTemperaturePageWise2", "CrewHealth"))
 
                 @Html.Hidden("savecrewtemperature", @Url.Action("SaveCrewTemperature", "CrewHealth"))
-                @Html.Hidden("GetCrewTemperatureByID", @Url.Action("GetCrewTemperatureByID", "CrewHealth"))
+
                 @Html.Hidden("GetAgeFromDOBForCrewTemperature", @Url.Action("GetAgeFromDOBForCrewTemperature", "CrewHealth"))
 
                 <div class="" id="sideform">
@@ -92,11 +92,11 @@
                                         <div class="form-group  mrTP-30">
                                             <div class="pull-right">
                                                 @*<div class="pull-right" id="sideform">
-                                            <button type="button" class="btn btn-info mrRHT-10" id="ShowReportForAll"><i class="ti-eye"></i> Show For All</button>
-                                        </div>*@
+                                                <button type="button" class="btn btn-info mrRHT-10" id="ShowReportForAll"><i class="ti-eye"></i> Show For All</button>
+                                            </div>*@
                                                 @*<div class="pull-right" id="sideform">
-                                            <button type="button" class="btn btn-primary mrRHT-10" id="btnPrintForAll"><i class="ti-printer"></i> Print For All</button>
-                                        </div>*@
+                                                <button type="button" class="btn btn-primary mrRHT-10" id="btnPrintForAll"><i class="ti-printer"></i> Print For All</button>
+                                            </div>*@
                                                 <div class="clearfix"></div>
                                             </div>
                                             <div class="pull-right">
@@ -108,8 +108,8 @@
                                                 </div>
 
                                                 @*<div class="pull-right" id="sideform">
-                                            <button type="button" class="btn btn-primary mrRHT-10" id="btnPrint"><i class="ti-printer"></i> Print Report</button>
-                                        </div>*@
+                                                <button type="button" class="btn btn-primary mrRHT-10" id="btnPrint"><i class="ti-printer"></i> Print Report</button>
+                                            </div>*@
                                                 <div class="clearfix"></div>
                                             </div>
                                             <div class="clearfix"></div>
@@ -155,129 +155,10 @@
 
 
 
-            @*Modal popup*@
-            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                <div class="modal-dialog" style="width:890px;">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="modal-title" id="myModalLabel">Add Monthly Medical Data</h4>
-                        </div>
+            @***********************Daily Temperature Edit Modal************************@
+            @Html.Partial("_pvDailyTemperatureModal")
 
-
-
-
-                        <div class="modal-dialog" id="dvuserdetailsn" style="width: 802px;">
-                            <fieldset class="for-panel">
-                                  <div class="form-group">
-                                      <input type="hidden" id="ID" />
-                                  </div>
-                                <div class="row">
-
-                                    @*<div class="">
-                                        <label for="selectCrew">Crew Name</label>
-                                        @Html.HiddenFor(model => model.Crew.ID, new { id = "hdnCrewId", value = Model.Crew.ID })
-                                        @Html.DropDownListFor(model => model.Crew.ID, (IEnumerable<SelectListItem>)ViewBag.Crew, "Select", new { @class = "form-control", @id = "ddlCrew" })
-                                    </div>*@
-                                    <div class="">
-                                        <div class="form-group">
-                                            <label for="Height">Height(cm)</label>
-                                            <input type="number" class="form-control" id="Height" placeholder="Height" />
-                                        </div>
-                                    </div>
-                                    <div class="">
-                                        <div class="form-group">
-                                            <label for="Weight">Weight(kg)</label>
-                                            <input type="number" class="form-control" id="Weight" placeholder="Weight" />
-                                        </div>
-                                    </div>
-                                    <div class="">
-                                        <div class="form-group">
-                                            <label for="Age ">Age</label>
-                                            <input type="number" class="form-control" id="Age" placeholder="Age" disabled/>
-                                        </div>
-                                    </div>
-                                    <div class="">
-                                        <div class="form-group">
-                                            @*<button type="button" class="btn btn-info mrRHT-10" id="CalculateBMI"><i class="ti-eye"></i>Calculate BMI</button>*@
-                                            <button type="button" class="btn btn-info mrRHT-10" id="btnSubmit" style="margin-top:0px;" onclick="return CalculateBMI();">Calculate BMI</button>
-                                            <input type="number" class="form-control" id="BMI" placeholder="BMI" />
-                                        </div>
-                                    </div>
-                                    <div class="">
-                                        <div class="form-group">
-                                            <label for="AnyDietaryRestrictions">Any Dietary Restrictions</label>
-                                            <input type="text" class="form-control" id="DietaryRestriction" placeholder="Any Dietary Restrictions" />      
-                                        </div>
-                                    </div>
-
-                                </div>
-                               
-                                <div class="row">
-                                    <legend>Vital Parameters</legend>
-                                    <div class="">
-                                        <div class="form-group">
-                                            <label for="Pulse ">Pulse</label>
-                                            <input type="number" class="form-control" id="Pulse" placeholder="Pulse" />
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="RespiratoryRate ">Respiratory Rate</label>
-                                            <input type="number" class="form-control" id="RespiratoryRate" placeholder="Respiratory Rate" />
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="SPO2 ">SPO2</label>
-                                            <input type="number" class="form-control" id="SPO2" placeholder="SPO2" />
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="Haemoglobin ">Haemoglobin</label>
-                                            <input type="number" class="form-control" id="Haemoglobin" placeholder="Haemoglobin" />
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="Creatinine ">Creatinine</label>
-                                            <input type="number" class="form-control" id="Creatinine" placeholder="Creatinine" />
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="Bilirubin ">Bilirubin</label>
-                                            <input type="number" class="form-control" id="Bilirubin" placeholder="Bilirubin" />
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="Temperature ">Temperature</label>
-                                            <input type="number" class="form-control" id="Temperature" placeholder="Temperature" />
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="Systolic ">Systolic</label>
-                                            <input type="number" class="form-control" id="Systolic" placeholder="Systolic" />
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="Diastolic ">Diastolic</label>
-                                            <input type="number" class="form-control" id="Diastolic" placeholder="Diastolic" />
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="FastingSuger ">Fasting Suger</label>
-                                            <input type="number" class="form-control" id="FastingSuger" placeholder="Fasting Suger " />
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="RandomSuger ">Random Suger</label>
-                                            <input type="number" class="form-control" id="RandomSuger" placeholder="RandomSuger" />
-                                        </div>
-                                       
-                                    </div>
-
-                                </div>
-                            </fieldset>
-                        </div>
-
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-info mrRHT-10" id="btnAdd" onclick="return SaveCrewTemperature();" style="width:86px;">Add</button>
-                            <button type="button" class="btn btn-info mrRHT-10" id="btnUpdate" style="display:none; width:86px;" onclick="SaveCrewTemperature();">Update</button>
-                            <button type="button" class="btn btn-default" data-dismiss="modal" style="width:86px;">Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-
+            @***************End********Daily Temperature Edit Modal************************@
 
         </div>
     </div>
