--- a/TM.RestHour/Views/MedicalAssistance/DoctorVisit.cshtml
+++ b/TM.RestHour/Views/MedicalAssistance/DoctorVisit.cshtml
@@ -68,7 +68,7 @@
             @Html.Partial("_pvWeatherDetails")
         </div>
 
-        <div class="content" id="patientDetails">
+        <div class="content card" id="patientDetails">
             @*<h1>This is tab 4</h1>*@
             @*@Html.Partial("_pvPatientDetails")*@
             <div id="dvPatientDetailsPage1">
