--- a/TM.RestHour/Views/MedicalAssistance/MediVac.cshtml
+++ b/TM.RestHour/Views/MedicalAssistance/MediVac.cshtml
@@ -56,19 +56,19 @@
 
             </div>
 
-            <div class="content" id="voyageDetails">
+            <div class="content card" id="voyageDetails">
                 @*<h1>This is tab 2</h1>*@
                 @*@Html.Partial("~/Views/MedicalAssistance/MediVac_VoyageDeatils.cshtml")*@
 
                 @Html.Partial("_pvVoyageDetails")
             </div>
 
-            <div class="content" id="weatherDetails">
+            <div class="content card" id="weatherDetails">
                 @*<h1>This is tab 3</h1>*@
                 @Html.Partial("_pvWeatherDetails")
             </div>
 
-            <div class="content" id="patientDetails">
+            <div class="content card" id="patientDetails">
                 @*<h1>This is tab 4</h1>*@
                 @*@Html.Partial("_pvPatientDetails")*@
                 <div id="dvPatientDetailsPage1">
