--- a/TM.RestHour/Views/Options/Index.cshtml
+++ b/TM.RestHour/Views/Options/Index.cshtml
@@ -254,7 +254,7 @@
                                             <div class="col-md-3">
                                                 <div class="form-group" style="width: 100%;">
                                                     <label for="selectCrew" class="col-sm-3 control-label">@*Select Crew*@</label>
-                                                    <div class=" col-md-6" style="padding-top:20px;">
+                                                    <div class="" style="padding-top:8px;">
                                                         <select class="form-control" id="AdjustmentValue">
                                                             <option value="+1">+1 Hour</option>
                                                             <option value="-1">-1 Hour</option>
@@ -272,7 +272,7 @@
                                             <div class="col-md-3">
                                                 <div class="form-group" style="width: 100%;">
                                                     <label for="selectCrew" class="col-sm-3 control-label">@*Select Crew*@</label>
-                                                    <div class=" col-md-6" style="padding-top:20px;">
+                                                    <div class=" col-md-6" style="padding-top:8px;">
                                                         <button type="button" class="button1" id="btnAdd" onclick="return AddOptions();">Save</button>
                                                         <br />
                                                     </div>
