--- a/TM.RestHour/Views/Regime/Index.cshtml
+++ b/TM.RestHour/Views/Regime/Index.cshtml
@@ -47,7 +47,7 @@
 
 
 
-                    <div class="row" style="width:100%;">
+                    <div class="" style="width:100%;">
                         <div style="min-height:100%;">
 
                             @Html.Hidden("getDataForRegimes", @Url.Action("GetDataForRegimes", "Regime"))
