--- a/TM.RestHour/Views/Reports/CrewList.cshtml
+++ b/TM.RestHour/Views/Reports/CrewList.cshtml
@@ -44,7 +44,7 @@
     </div>
     
     <div class="card bac">
-        <div class="card">
+        <div class="">
 
             <div class="row">
                 @*@Html.Hidden("GetCrewBookedHours", @Url.Action("GetCrewBookedHours", "TimeSheet"))*@
