--- a/TM.RestHour/Views/WellBeing/WellBeingHealth.cshtml
+++ b/TM.RestHour/Views/WellBeing/WellBeingHealth.cshtml
@@ -33,7 +33,7 @@
 </style>
 
 <h2>WellBeingHealth</h2>
-<div class="well-table">
+<div class="well-table card">
     <table id="tblWellBeingHealth" class="table table-bordered table-hover">
         <thead class="thead-dark">
             <tr>
