--- a/TM.RestHour/Views/WellBeing/WellBeingMentalHealth.cshtml
+++ b/TM.RestHour/Views/WellBeing/WellBeingMentalHealth.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "WellBeingMentalHealth";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<script src="~/Scripts/jquery-3.6.0.min.js"></script>
 <h2>WellBeingMentalHealth</h2>
 <div class="well-table">
     <table class="table table-bordered table-hover">
@@ -58,7 +58,7 @@
                 <td><input type="checkbox" /></td>
                 <td>22.6.2022</td>
             </tr>
-          
+
         </tbody>
     </table>
 </div>
