--- a/TM.RestHour/Views/CompanyDetails/Index.cshtml
+++ b/TM.RestHour/Views/CompanyDetails/Index.cshtml
@@ -209,7 +209,7 @@
                                         </div>
 
 
-                                        <div class="modal-footer" style="width: 145%;">
+                                        <div class="modal-footer">
                                             @*<button type="button" class="button1" id="btnNext" onclick="return SaveInitialShipValues();" style="width:86px;">Next</button>
             <button type="button" class="button1" id="btnAdd" onclick="return GetCompanyDetailsByID();" style="width:86px;">Get Details</button>*@
                                         </div>
