--- a/TM.RestHour/Views/Equipments/Index.cshtml
+++ b/TM.RestHour/Views/Equipments/Index.cshtml
@@ -117,12 +117,12 @@
                                 </div>
 
                             </div>
+                            <div class="col-md-4">
+                                <button type="button" class="button1" id="btnShow" onclick="return loadData();" style="width:138px;">Show</button>
+                                </div>
 
-                            <button type="button" class="button1" id="btnShow" onclick="return loadData();" style="width:138px;">Show</button>
-
-
+                            </div>
                         </div>
-                    </div>
                 </div>
                 <div class="col-lg-12">
                     <div class="card marin">
