--- a/TM.RestHour/Views/Equipments/Index2.cshtml
+++ b/TM.RestHour/Views/Equipments/Index2.cshtml
@@ -143,11 +143,11 @@
                             </div>
 
                         </div>
-
-                        <button type="button" class="button1" id="btnShow" onclick="return loadData2();" style="width:138px;">Show</button>
-
+                        <div class="col-md-4">
+                            <button type="button" class="button1" id="btnShow" onclick="return loadData2();" style="width:138px;">Show</button>
+</div>
+                        </div>
                     </div>
-                </div>
                 <div class="row">
                     <div class="col-md-12">
                         <div class="card marin">
