--- a/TM.RestHour/Views/MedicalAssistance/TeleMedicine.cshtml
+++ b/TM.RestHour/Views/MedicalAssistance/TeleMedicine.cshtml
@@ -67,7 +67,7 @@
             @Html.Partial("_pvWeatherDetails")
         </div>
 
-        <div class="content" id="patientDetails">
+        <div class="content card" id="patientDetails">
             @*<h1>This is tab 4</h1>*@
             @*@Html.Partial("_pvPatientDetails")*@
             <div id="dvPatientDetailsPage1">
@@ -83,7 +83,7 @@
             <div class="row" style="border: 1px solid #eee; padding: 10px;">
 
                 <div class="col-md-4">
-                    <div class="col-md-3" style="padding: 10px; margin-top:68px;">
+                    <div class="col-md-7" style="padding: 10px; margin-top:68px;">
                         <button type="button" class="button1" id="btnAdd" onclick="return SaveCIRMNew('TeleMedicine');">Add</button>
                     </div>
                 </div>
