--- a/TM.RestHour/Views/MedicalChest/MedicalChestCertificate.cshtml
+++ b/TM.RestHour/Views/MedicalChest/MedicalChestCertificate.cshtml
@@ -43,48 +43,50 @@
         height: 100%;
     }
 </style>
-<div class="card">
+<div class="">
     <div class="head_title">
         <h1 class="ta">Medical Chest Certificate</h1>
         <input type="hidden" id="ChestId" />
     </div>
-    <div class="row" style="border: 1px solid #eee; padding: 10px;">
-        <div class="col-lg-4 col-sm-12">
-            <div class="form-group">
-                <label for="IssuingAuthorityName">Name</label>
-                <input type="text" class="form-control" style="width:90%;" id="IssuingAuthorityName" placeholder="Issuing Authority Name" />
+    <div class="card">
+        <div class="row">
+            <div class="col-lg-4 col-sm-12">
+                <div class="form-group">
+                    <label for="IssuingAuthorityName">Name</label>
+                    <input type="text" class="form-control" style="width:90%;" id="IssuingAuthorityName" placeholder="Issuing Authority Name" />
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-12">
+                <div class="form-group">
+                    <label for="IssuedDate">Issued Date</label>
+                    <input type="text" class="form-control" style="width:90%;" id="IssuedDate" placeholder="Issued Date" />
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-12">
+                <div class="form-group">
+                    <label for="ExpiryDate">Expiry Date</label>
+                    <input type="text" class="form-control" style="width:90%;" id="ExpiryDate" placeholder="ExpiryDate" />
+                </div>
             </div>
         </div>
-        <div class="col-lg-4 col-sm-12">
-            <div class="form-group">
-                <label for="IssuedDate">Issued Date</label>
-                <input type="text" class="form-control" style="width:90%;" id="IssuedDate" placeholder="Issued Date" />
-            </div>
-        </div>
-        <div class="col-lg-4 col-sm-12">
-            <div class="form-group">
-                <label for="ExpiryDate">Expiry Date</label>
-                <input type="text" class="form-control" style="width:90%;" id="ExpiryDate" placeholder="ExpiryDate" />
-            </div>
-        </div>
-    </div>
-    <div class="row" style="border: 1px solid #eee; padding: 10px;">
-        <div class="col-lg-8 col-sm-12">
-            <div class="form-group">
-                <img id="imgCertificate" src="~/images/NoImage.jpg">
+        <div class="row" style="border: 1px solid #eee; padding: 10px;">
+            <div class="col-lg-8 col-sm-12">
+                <div class="form-group">
+                    <img id="imgCertificate" src="~/images/NoImage.jpg">
 
-                @*<label for="IssuingAuthorityName">Name</label>
-                    <input type="text" class="form-control" style="width:90%;" id="IssuingAuthorityName" placeholder="Issuing Authority Name" />*@
+                    @*<label for="IssuingAuthorityName">Name</label>
+                        <input type="text" class="form-control" style="width:90%;" id="IssuingAuthorityName" placeholder="Issuing Authority Name" />*@
+                </div>
             </div>
-        </div>
-        <div class="col-lg-4 col-sm-12">
-            <div class="form-group geeks">
-                <input type="hidden" id="hdnPathMedicalChestCertificateImage" value="" />
-                <input type="hidden" id="hdnMedicalChestCertificateImageName" value="" />
-                <label for="AttachFile">Select File</label>
-                @*<input type="text" class="form-control" id="EstimatedTimeOfArrival" placeholder="Estimated Time Of Arrival (hrs)" />*@
-                <input id="uploadMedicalChestCertificate" name="upload" type="file" accept="image/*" />
-                <button type="button" class="buttonpop" onclick="  UploadMedicalChestCertificateFile(); " style="width:86px;">Upload</button>
+            <div class="col-lg-4 col-sm-12">
+                <div class="form-group geeks">
+                    <input type="hidden" id="hdnPathMedicalChestCertificateImage" value="" />
+                    <input type="hidden" id="hdnMedicalChestCertificateImageName" value="" />
+                    <label for="AttachFile">Select File</label>
+                    @*<input type="text" class="form-control" id="EstimatedTimeOfArrival" placeholder="Estimated Time Of Arrival (hrs)" />*@
+                    <input id="uploadMedicalChestCertificate" name="upload" type="file" accept="image/*" />
+                    <button type="button" class="buttonpop" onclick="  UploadMedicalChestCertificateFile(); " style="width:86px;">Upload</button>
+                </div>
             </div>
         </div>
     </div>
