--- a/TM.RestHour/Views/Reports/DailyCrewReport.cshtml
+++ b/TM.RestHour/Views/Reports/DailyCrewReport.cshtml
@@ -41,7 +41,7 @@
         </div>
     </div>
     <div class="card bac">
-        <div class="card">
+        <div class="">
             <div class="row">
                 @*@Html.Hidden("GetCrewBookedHours", @Url.Action("GetCrewBookedHours", "TimeSheet"))*@
 
