--- a/TM.RestHour/css/style.css
+++ b/TM.RestHour/css/style.css
@@ -15245,7 +15245,7 @@ table.lms_table_active3.dataTable thead .sorting_desc::after {
 }
 
 .mrRHT-10 {
-    margin-right: 10px;
+    margin-right: 8px;
 }
 
 .mrLFT-10 {
@@ -15377,14 +15377,14 @@ button:disabled {
 
     .card table.dataTable thead th, .card table.dataTable thead td, .card .table th {
         color: #fff;
-        font-size: 16px;
+        font-size: 14px;
         font-weight: bold;
         border-right: 1px solid #fff;
     }
 
     .card table.dataTable tbody th, .card table.dataTable tbody td, .card .table td {
         color: #333;
-        font-size: 16px;
+        font-size: 14px;
         border-right: 1px solid #dbdbdb;
     }
 
@@ -15441,7 +15441,7 @@ button:disabled {
     position: absolute;
     font-size: 26px;
     top: 0;
-    right: 0;
+    right: 8px;
     color: #0d417f;
 }
 
@@ -15563,6 +15563,7 @@ button:disabled {
 
 .well-table {
     box-shadow: 0px 0px 8px #cbcbcb;
+    padding:20px;
 }
 
     .well-table .table .thead-dark th {
@@ -15600,6 +15601,7 @@ button:disabled {
         border: 0;
         border-radius: 4px;
         padding: 5px 14px;
+        margin: 13px 0 0 0;
     }
 
     .upload-file .downexcel {
@@ -15822,7 +15824,7 @@ button:disabled {
     border: 0;
     background: #192848;
     color: #fff;
-    padding: 7px 48px;
+    padding: 7px 28px;
     border-radius: 20px;
     font-size: 17px;
 }
@@ -15967,7 +15969,7 @@ button:disabled {
 }
 
 .card {
-    padding: 10px;
+    padding: 15px;
 }
 
 .head_title img {
@@ -16231,6 +16233,41 @@ button:disabled {
 
 /*for popup*/
 .modal-dialog {
-
     pointer-events: painted !important;
+}
+table.dataTable tbody th, table.dataTable tbody td {
+    padding: 16px 16px !important;
+}
+.dataTables_wrapper.no-footer {
+    padding: 20px;
+}
+.panel-body {
+    padding: 20px 10px;
+}
+.panel-group{margin:0 0 20px 0;}
+
+.button1, .buttonpop {
+    background: #0b3f7e;
+    color: #fff;
+    border: 0;
+    font-size: 17px;
+    padding: 5px 23px;
+    /*width: 116px;*/
+    margin:0 10px;
+}
+.buttonpop {
+    background: #0b3f7e;
+    color: #fff;
+    border: 0;
+    font-size: 16px;
+    padding: 5px 23px;
+    width: 136px !important;
+    margin: 20px 0;
+}
+.ui-datepicker .ui-datepicker-prev, .ui-datepicker .ui-datepicker-next {
+    top: -7px !important;
+}
+#btnNext{width:119px;}
+table.dataTable thead th, table.dataTable thead td {
+    padding: 16px 23px !important;
 }
