--- a/TM.RestHour/Views/CreateNewUserAccount/Index.cshtml
+++ b/TM.RestHour/Views/CreateNewUserAccount/Index.cshtml
@@ -8,6 +8,20 @@
 <link href="~/Content/DataTables/css/select.dataTables.min.css" rel="stylesheet" />
 <link href="~/Content/DataTables/css/rowReorder.dataTables.min.css" rel="stylesheet" />
 
+<link href="~/css/style.css" rel="stylesheet" />
+<!-- Bootstrap CSS -->
+<link rel="stylesheet" href="~/css/bootstrap.min.css" />
+<!-- themefy CSS -->
+<link rel="stylesheet" href="~/vendors/themefy_icon/themify-icons.css" />
+
+<!-- font awesome CSS -->
+<link rel="stylesheet" href="~/vendors/font_awesome/css/all.min.css" />
+<link rel="stylesheet" href="~/vendors/tagsinput/tagsinput.css" />
+
+<!-- menu css  -->
+<link rel="stylesheet" href="~/css/metisMenu.css">
+<!-- style CSS -->
+<link rel="stylesheet" href="~/css/colors/default.css" id="colorSkinCSS">
 <link href="~/Content/themes/base/jquery-ui.css" rel="stylesheet" />
 
 <script src="~/Scripts/CreateNewUserAccount.js"></script>
@@ -37,10 +51,10 @@
     background-size: cover;">
 
     <div class="row">
-        <div class="col-md-7">
+        <div class="col-md-12">
             <h2 class="ta">Create New User Account</h2>
         </div>
-        <div class="col-md-4 bac">
+        <div class="col-md-12 bac">
             <div class="">
                 <div class="row">
                     <div class="col-md-12">
@@ -48,10 +62,10 @@
                             <div class="modal-dialog" style="width: 100%; margin: 0 auto">
                                 <div class=" modal-content" style="margin: 0 auto; border: none; box-shadow: none;">
                                     @*<div class="modal-header">
-                                            <h4 class="modal-title" id="myModalLabel">Create New User Account</h4>
-                                        </div>*@
+                                    <h4 class="modal-title" id="myModalLabel">Create New User Account</h4>
+                                </div>*@
                                     <input id="hdnID" type="hidden" />
-                                    <div class="modal-body" style="margin-left: 50px;">
+                                    <div class="modal-body">
                                         <form>
 
                                             <div class="form-group">
@@ -91,15 +105,15 @@
                         </div>
                     </div>
                     @*<div class="col-md-6">
-                            <table id="Mastertable" class="display" style="width:100%">
-                                <thead>
-                                    <tr>
-                                        <th>Username</th>
-                                        <th>Active</th>
-                                    </tr>
-                                </thead>
-                            </table>
-                        </div>*@
+                    <table id="Mastertable" class="display" style="width:100%">
+                        <thead>
+                            <tr>
+                                <th>Username</th>
+                                <th>Active</th>
+                            </tr>
+                        </thead>
+                    </table>
+                </div>*@
                 </div>
 
 
@@ -110,12 +124,21 @@
                 @Scripts.Render("~/bundles/jqueryval")
                 @Styles.Render("~/Content/themes/base/css")
                 @Scripts.Render("~/bundles/jqueryui")
+                <script src="~/js/jquery-3.6.0.min.js"></script>
+                <!-- bootstarp js -->
+                <script src="~/js/bootstrap.min.js"></script>
+                <!-- sidebar menu  -->
+                <script src="~/js/metisMenu.js"></script>
 
+                <!-- custom js -->
+                <script src="~/js/dashboard_init.js"></script>
+                <script src="~/js/custom.js"></script>
                 <script src="~/Scripts/DataTables/dataTables.select.min.js"></script>
                 <script src="~/Scripts/DataTables/dataTables.rowReorder.min.js"></script>
 
                 <script src="~/Scripts/toastr.min.js"></script>
                 <link href="~/Content/toastr.min.css" rel="stylesheet" />
+             
 
                 <script type="text/javascript">
 
